# clouddrift

./: .codecov.yml  .gitignore  .zenodo.json  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  api.html  badge.json  contributing.html  datasets.html  environment.yml  genindex.html  get_started_ridge_analysis.ipynb  hurdat2_gdp1h_example.ipynb  index.html  install.html  matern_displacement.txt  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  usage.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  ci.yml  docs.yml  draft-pdf.yml  environment.yml  lint.yml  pypi.yml  update-traffic-badge.yml
_autosummary/: clouddrift.adapters.andro.html  clouddrift.adapters.andro.to_raggedarray.html  clouddrift.adapters.andro.to_xarray.html  clouddrift.adapters.gdp.cast_float64_variables_to_float32.html  clouddrift.adapters.gdp.cut_str.html  clouddrift.adapters.gdp.decode_date.html  clouddrift.adapters.gdp.drogue_presence.html  clouddrift.adapters.gdp.fetch_netcdf.html  clouddrift.adapters.gdp.fill_values.html  clouddrift.adapters.gdp.gdp1h.download.html  clouddrift.adapters.gdp.gdp1h.html  clouddrift.adapters.gdp.gdp1h.preprocess.html  clouddrift.adapters.gdp.gdp1h.to_raggedarray.html  clouddrift.adapters.gdp.gdp6h.download.html  clouddrift.adapters.gdp.gdp6h.html  clouddrift.adapters.gdp.gdp6h.preprocess.html  clouddrift.adapters.gdp.gdp6h.to_raggedarray.html  clouddrift.adapters.gdp.gdpsource.html  clouddrift.adapters.gdp.gdpsource.to_raggedarray.html  clouddrift.adapters.gdp.get_gdp_metadata.html  clouddrift.adapters.gdp.html  clouddrift.adapters.gdp.order_by_date.html  clouddrift.adapters.gdp.parse_directory_file.html  clouddrift.adapters.gdp.rowsize.html  clouddrift.adapters.gdp.str_to_float.html  clouddrift.adapters.gdp1h.download.html  clouddrift.adapters.gdp1h.html  clouddrift.adapters.gdp1h.preprocess.html  clouddrift.adapters.gdp1h.to_raggedarray.html  clouddrift.adapters.gdp6h.download.html  clouddrift.adapters.gdp6h.html  clouddrift.adapters.gdp6h.preprocess.html  clouddrift.adapters.gdp6h.to_raggedarray.html  clouddrift.adapters.glad.get_dataframe.html  clouddrift.adapters.glad.html  clouddrift.adapters.glad.to_raggedarray.html  clouddrift.adapters.glad.to_xarray.html  clouddrift.adapters.html  clouddrift.adapters.hurdat2.DataLine.html  clouddrift.adapters.hurdat2.HeaderLine.html  (+104 more)
_modules/: index.html
_modules/clouddrift/: binning.html  datasets.html  kinematics.html  pairs.html  plotting.html  ragged.html  raggedarray.html  signal.html  sphere.html  wavelet.html
_sources/: datasets.rst  index.rst  install.rst  usage.rst
_sources/_autosummary/: clouddrift.adapters.andro.rst  clouddrift.adapters.andro.to_raggedarray.rst  clouddrift.adapters.andro.to_xarray.rst  clouddrift.adapters.gdp.cast_float64_variables_to_float32.rst  clouddrift.adapters.gdp.cut_str.rst  clouddrift.adapters.gdp.decode_date.rst  clouddrift.adapters.gdp.drogue_presence.rst  clouddrift.adapters.gdp.fetch_netcdf.rst  clouddrift.adapters.gdp.fill_values.rst  clouddrift.adapters.gdp.gdp1h.download.rst  clouddrift.adapters.gdp.gdp1h.preprocess.rst  clouddrift.adapters.gdp.gdp1h.rst  clouddrift.adapters.gdp.gdp1h.to_raggedarray.rst  clouddrift.adapters.gdp.gdp6h.download.rst  clouddrift.adapters.gdp.gdp6h.preprocess.rst  clouddrift.adapters.gdp.gdp6h.rst  clouddrift.adapters.gdp.gdp6h.to_raggedarray.rst  clouddrift.adapters.gdp.gdpsource.rst  clouddrift.adapters.gdp.gdpsource.to_raggedarray.rst  clouddrift.adapters.gdp.get_gdp_metadata.rst  clouddrift.adapters.gdp.order_by_date.rst  clouddrift.adapters.gdp.parse_directory_file.rst  clouddrift.adapters.gdp.rowsize.rst  clouddrift.adapters.gdp.rst  clouddrift.adapters.gdp.str_to_float.rst  clouddrift.adapters.gdp1h.download.rst  clouddrift.adapters.gdp1h.preprocess.rst  clouddrift.adapters.gdp1h.rst  clouddrift.adapters.gdp1h.to_raggedarray.rst  clouddrift.adapters.gdp6h.download.rst  clouddrift.adapters.gdp6h.preprocess.rst  clouddrift.adapters.gdp6h.rst  clouddrift.adapters.gdp6h.to_raggedarray.rst  clouddrift.adapters.glad.get_dataframe.rst  (+110 more)
clouddrift/: __init__.py  _version.py  analysis.py  analytic.py  binning.py  cli.py  data.py  dataformat.py  datasets.py  eulerian.py  filter.py  haversine.py  kinematics.py  pairs.py  paper.bib  plotting.py  ragged.py  raggedarray.py  ridges.py  select.py  signal.py  spectrum.py  sphere.py  time.py  timeseries.py  transfer.py  typing.py  utility.py  wavelet.py
data/: README.md  gdp.py  gdp6h.py  glad.py  parcels.py  preprocess-6hourly.ipynb  preprocess-hourly.ipynb  preprocess-parquet.ipynb  preprocess.ipynb  sync_gdp_6hourly.sh  sync_gdp_hourly.sh
dev/: apply_ufunc.ipynb  benchmark-awkward.ipynb  benchmark-daskdf.ipynb  benchmark-pandas.ipynb  benchmark-xarray.ipynb  benchmarking.ipynb  calculation-periodogram.ipynb  data_prev.ipynb  data_prev.py  interp-era5.ipynb
docs/: api.rst  conf.py  contributing.rst  datasets.rst  index.rst  install.rst  paper.md  requirements.txt  usage.rst  why.rst
examples/: calculation-periodogram.ipynb  data.ipynb  dataformat-gdp-6hourly.ipynb  dataformat-gdp.ipynb  dataformat-glad.ipynb  dataformat-numerical.ipynb  dataformat-parcels.ipynb  example_glad_exp.ipynb  interp_cci_drifters.ipynb  interp_dask.ipynb
scripts/: README.md  get_clib_so_dependencies
tests/: __init__.py  abc_tests.py  analysis_tests.py  analytic_tests.py  binning_test.py  conftest.py  dataformat_tests.py  datasets_test.py  datasets_tests.py  docexamples.py  environment.yml  example_tests.py  filter_tests.py  haversine_tests.py  kinematics_test.py  kinematics_tests.py  pairs_test.py  pairs_tests.py  plotting_test.py  plotting_tests.py  ragged_test.py  ragged_tests.py  raggedarray_test.py  raggedarray_tests.py  ridges_test.py  ridges_tests.py  select_tests.py  signal_test.py  signal_tests.py  spectrum_tests.py  sphere_test.py  sphere_tests.py  timeseries_tests.py  transfer_test.py  transfer_tests.py  utility_tests.py  utils.py  wavelet_test.py  wavelet_tests.py
tutorials/: data.ipynb
(+74 files in other folders)
