[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clouddrift"
version = "0.32.0"
authors = [
  { name="Shane Elipot", email="selipot@miami.edu" },
  { name="Philippe Miron", email="philippemiron@gmail.com" },
  { name="Milan Curcic", email="mcurcic@miami.edu" },
  { name="Kevin Santana", email="kevinsantana11@gmail.com" }
]
description = "Accelerating the use of Lagrangian data for atmospheric, oceanic, and climate sciences"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.8.4",
    "awkward>=2.0.0",
    "fsspec>=2022.3.0",
    "netcdf4>=1.6.4",
    "h5netcdf>=1.3.0",
    "numpy>=1.22.4",
    "pandas>=1.3.4",
    "pyarrow>=8.0.0",
    "tqdm>=4.64.0",
    "requests>=2.31.0",
    "scipy>=1.11.2",
    "xarray>=2023.5.0",
    "zarr>=2.14.2",
    "tenacity>=8.2.3"
]

[project.urls]
Homepage = "https://github.com/Cloud-Drift/clouddrift"
Documentation = "https://cloud-drift.github.io/clouddrift"

[tool.ruff.lint]
ignore = ["E731", "E741"]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.9"
follow_imports = "normal"
files = [
  "clouddrift/**/*.py",
  "tests/**/*.py",
]

[[tool.mypy.overrides]]
module = [
  "clouddrift.kinematics",
  "clouddrift.pairs",
  "clouddrift.plotting",
  "clouddrift.ragged",
  "clouddrift.signal",
  "clouddrift.sphere",
  "clouddrift.wavelet",
  "tests.kinematics_tests",
  "tests.pairs_tests",
  "tests.plotting_tests",
]
ignore_errors = true