[project]
name = "clouddrift"
version = "0.48.0"
authors = [
  { name="Shane Elipot", email="selipot@miami.edu" },
  { name="Philippe Miron", email="philippemiron@gmail.com" },
  { name="Milan Curcic", email="mcurcic@miami.edu" },
  { name="Kevin Santana", email="kevinsantana11@gmail.com" },
  { name="Kevin Shuman", email="kxs5046@miami.edu" }
]
description = "Accelerating the use of Lagrangian data for atmospheric, oceanic, and climate sciences"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.5",
    "awkward>=2.9.0",
    "fsspec>=2026.3.0",
    "netcdf4>=1.7.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "scipy>=1.15.2",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "xarray>=2025.6.1",
    "zarr<3",
]

[project.urls]
Homepage = "https://github.com/Cloud-Drift/clouddrift"
Documentation = "https://cloud-drift.github.io/clouddrift"

[project.optional-dependencies]
all = ["clouddrift[plotting]"]
plotting = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "clouddrift[plotting]",
    "ipykernel>=7.2.0",
    "mypy>=1.20.1",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "sphinx>=8.1.3,<9",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
    "types-requests>=2.33.0.20260503",
    "types-tqdm>=4.67.3.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
ignore = ["E731", "E741"]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = [
  "tests/**/*_test.py",
]
addopts = "-rs"

[tool.mypy]
python_version = "3.14"
follow_imports = "normal"
files = [
  "clouddrift/**/*.py",
  "tests/**/*.py",
]

[[tool.mypy.overrides]]
module = [
  "clouddrift.kinematics",
  "clouddrift.pairs",
  "clouddrift.plotting",
  "clouddrift.ragged",
  "clouddrift.signal",
  "clouddrift.sphere",
  "clouddrift.wavelet",
  "tests.kinematics_test",
  "tests.pairs_test",
  "tests.plotting_test",
]
ignore_errors = true

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
